Update: NLW6 Class 03 - Database and Authentication integrated;

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,10 @@
 @import './vars';
 @import './fonts';
 @import './globals';
+@import './colors';
+@import './container';
+
+@import './flex';
+@import './img';
 @import './spacing';
 @import './text';
