--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -19,3 +19,18 @@ h1 {
   font-size: 36px;
   line-height: 42px;
 }
+
+h2 {
+  font-size: 24px;
+  line-height: 32px;
+}
+
+h3 {
+  font-size: 18px;
+  line-height: 27px;
+}
+
+p {
+  margin: 8px 0;
+  padding: 0;
+}
