--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -1,4 +1,4 @@
-$sizes: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60;
+$sizes: 0, 4, 5, 8, 10, 12, 15, 16, 20, 22, 24, 25, 28, 30, 32, 34, 35, 36, 40, 45, 50, 55, 60;
 
 @each $size in $sizes {
   .m {
