--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -13,6 +13,22 @@ $this: ".text";
     text-align: right;
   }
 
+  &-400 {
+    font-weight: 400;
+  }
+
+  &-500 {
+    font-weight: 500;
+  }
+
+  &-700 {
+    font-weight: 700;
+  }
+
+  &-900 {
+    font-weight: 900;
+  }
+
   &-lead {
     font-size: 24px;
     line-height: 32px;
