--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -29,6 +29,16 @@ $this: ".text";
     font-weight: 900;
   }
 
+  &-sm {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  &-md {
+    font-size: 20px;
+    line-height: 28px;
+  }
+
   &-lead {
     font-size: 24px;
     line-height: 32px;
