Update: NLW6 Class 05 - Room and Questions Actions;

--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -15,7 +15,7 @@ $btn_variants:
   outline: 0;
   border: 0;
   border-radius: var(--radius);
-  background-color: var(--color-gray-light);
+  background-color: transparent;
   color: var(--color-black);
 
   align-items: center;
