--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -19,6 +19,7 @@
   --color-pink: #FF59F8;
   --color-pink-dark: #E559F9;
 
+  --color-purple-light: #F4F0FF;
   --color-purple: #835AFD;
   --color-purple-hover: #6F4BD8;
 
@@ -28,6 +29,7 @@
   --color-text: var(--color-black);
   --color-input-background: var(--color-white);
 
+  --color-primary-light: var(--color-purple-light);
   --color-primary: var(--color-purple);
   --color-primary-hover: var(--color-purple-hover);
   --color-primary-inverse: var(--color-white);
